<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/top_background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/la_sagrada"
            android:contentDescription="@string/signup_view_main_image"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/subtitle"
            android:layout_gravity="end"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:text="@string/pref_title_default"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h6" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:paddingBottom="@dimen/margin"
            android:paddingLeft="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:text="@string/pref_subtitle_default"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/pref_email_label_default"
            android:textSize="@dimen/text_view_size" />

        <EditText
            android:id="@+id/email_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_label"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/pref_email_placeholder_default"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/submit_btn"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_small"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/pref_submit_btn_default" />
    </RelativeLayout>

</LinearLayout>
